@@ -1,3 +1,9 @@
+2008-02-26  Bradley M. Kuhn  <bkuhn@ebb.org>
+
+	* tests/test-pokeravatar.py.in
+	(PokerAvatarTestCase.loseConnection): Wrote function.
+	(PokerAvatarTestCase.test44_possibleObserverLoggedIn): Wrote function.
+
 2008-02-25  Loic Dachary <loic@dachary.org>
 
 	* Release 1.3.0
